--- a/.github/workflows/deploy-cloudflare-worker.yml
+++ b/.github/workflows/deploy-cloudflare-worker.yml
@@ -1,4 +1,4 @@
-name: Deploy Cloudflare Workers & Update KV
+name: deploy cloudflare workers & update kv
 
 on:
   workflow_dispatch:
@@ -7,10 +7,13 @@ on:
       - main
     paths:
       - 'worker.js'
-      - 'wrangler-*.toml' # همه فایل‌های wrangler-*.toml در ریشه
+      - 'wrangler-*.toml'
       - 'package.json'
+      - 'scraper.py' # اگر scraper.py تغییر کند، workflow باید اجرا شود
+      - 'all_live_configs.json' # اگر این فایل دستی تغییر کند، workflow باید اجرا شود
+      - 'cache_version.txt' # اگر این فایل دستی تغییر کند، workflow باید اجرا شود
   schedule:
-    - cron: '0 */4 * * *'
+    - cron: '0 */4 * * *' # هر 4 ساعت
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -19,50 +22,58 @@ concurrency:
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
-    name: Build configs, deploy workers & upload to KV
+    name: build configs, deploy workers & upload to kv
     permissions:
       contents: read
+      id-token: write # برای OIDC (اگر استفاده شود) یا سایر مجوزهای پیشرفته
+      # اگر از secrets.cloudflare_api_token استفاده می‌کنید، نیازی به id-token: write نیست.
+      # اما برای اطمینان از دسترسی کامل در آینده می‌تواند مفید باشد.
       
     steps:
-      - name: Checkout repository
+      - name: checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Python
+      - name: setup python 3.10
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+          cache: 'pip' # کش کردن پکیج‌های pip برای سرعت بیشتر
+          cache-dependency-path: 'requirements.txt' # اگر دارید
 
-      - name: Install Python dependencies
+      - name: install python dependencies
         run: pip install requests pyyaml
 
-      - name: Run config scraper
+      - name: run config scraper
         run: python scraper.py
         env:
-          GH_PAT: ${{ secrets.GH_PAT }}
+          GH_PAT: ${{ secrets.GH_PAT }} # نام متغیرهای محیطی معمولاً با حروف بزرگ است
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      # بهبود 1: استفاده از اکشن رسمی setup-node برای نصب Node.js
+      # این روش پایدارتر و استانداردتر است.
+      - name: setup node.js 20
+        uses: actions/setup-node@v4
         with:
-          node-version: '20' # ✅ استفاده از Node.js v20 (مطابق نیاز Wrangler جدید)
-          
-      - name: Install Node.js dependencies and Global Wrangler
+          node-version: '20'
+          cache: 'npm' # کش کردن dependencyهای npm برای سرعت بیشتر
+
+      # بهبود 2: نصب wrangler به صورت محلی و بررسی نسخه آن
+      # با استفاده از setup-node@v4، npm در PATH قرار می‌گیرد.
+      - name: install node.js dependencies and local wrangler
         run: |
           npm install # نصب dependencyهای پروژه از package.json (اگر در ریشه دارید)
-          npm install -g wrangler@latest # ✅ نصب Wrangler به صورت سراسری و با آخرین نسخه
-          echo "Installed Wrangler version (Global):"
-          wrangler --version # ✅ بررسی و نمایش نسخه Wrangler نصب شده
-          echo "Node.js version:"
-          node -v # ✅ بررسی و نمایش نسخه Node.js
+          npm install wrangler@latest # نصب wrangler به صورت محلی در node_modules
+          echo "Installed wrangler version (local):"
+          ./node_modules/.bin/wrangler --version # بررسی نسخه wrangler نصب شده محلی
           
-      # --- مرحله دیپلوی هر چهار Worker ---
-      - name: Deploy All Workers
+      # --- مرحله دیپلوی هر چهار worker ---
+      - name: deploy all workers
         run: |
-          WORKER_NAMES=("rapid-scene-1da6" "winter-hill-0307" "v2v" "v2v-proxy") # لیست چهار Worker
-          for worker_name in "${WORKER_NAMES[@]}"; do
+          worker_names=("rapid-scene-1da6" "winter-hill-0307" "v2v" "v2v-proxy") # لیست چهار worker
+          for worker_name in "${worker_names[@]}"; do # استفاده از "@" برای اطمینان از پردازش صحیح آرایه
             echo "--- Deploying worker: $worker_name ---"
-            # ✅ فراخوانی مستقیم 'wrangler' (نصب شده سراسری)
-            # با مشخص کردن صریح entry-point، فایل پیکربندی (در ریشه) و نام Worker
-            wrangler deploy "worker.js" \
+            # استفاده از npx برای فراخوانی wrangler نصب شده محلی و دستور deploy
+            # یا مستقیماً `./node_modules/.bin/wrangler` که قبلاً در مراحل قبل نصب شده
+            ./node_modules/.bin/wrangler deploy "worker.js" \
               --config "wrangler-${worker_name}.toml" \
               --name "$worker_name" \
               --compatibility-date "2024-03-20" \
@@ -75,25 +86,36 @@ jobs:
             echo "--- Deployment of $worker_name successful ---"
           done
         env:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }} # استفاده از API Token جدید و امن
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }} # نام متغیرهای محیطی معمولاً با حروف بزرگ است
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
 
-      # --- مراحل آپلود KV به Namespace مشترک/مرکزی ---
-      # فرض بر این است که CLOUDFLARE_KV_NAMESPACE_ID شناسه KV Namespace مشترک است
-      - name: Upload all_live_configs.json to KV
+      # --- مراحل آپلود kv به namespace مشترک/مرکزی ---
+      # ✅ رفع مشکل 3: تصحیح دستور wrangler kv:key put برای all_live_configs.json
+      - name: upload all_live_configs.json to kv
         run: |
-          wrangler kv:key put "all_live_configs.json" \
-            --path "./all_live_configs.json" \
-            --namespace-id "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}"
+          if [ -f "all_live_configs.json" ]; then # بررسی وجود فایل قبل از آپلود
+            cat all_live_configs.json | \
+            ./node_modules/.bin/wrangler kv:key put "all_live_configs.json" \
+              --namespace-id "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}"
+            echo "all_live_configs.json uploaded successfully."
+          else
+            echo "Warning: all_live_configs.json not found, skipping KV upload."
+          fi
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
 
-      - name: Upload cache_version.txt to KV
+      # ✅ رفع مشکل 4: تصحیح دستور wrangler kv:key put برای cache_version.txt
+      - name: upload cache_version.txt to kv
         run: |
-          wrangler kv:key put "cache_version.txt" \
-            --path "./cache_version.txt" \
-            --namespace-id "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}"
+          if [ -f "cache_version.txt" ]; then # بررسی وجود فایل قبل از آپلود
+            cat cache_version.txt | \
+            ./node_modules/.bin/wrangler kv:key put "cache_version.txt" \
+              --namespace-id "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}"
+            echo "cache_version.txt uploaded successfully."
+          else
+            echo "Warning: cache_version.txt not found, skipping KV upload."
+          fi
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
