--- a/.github/workflows/deploy-cloudflare-worker.yml
+++ b/.github/workflows/deploy-cloudflare-worker.yml
@@ -1,79 +1,89 @@
 name: deploy cloudflare workers & update kv
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: # اجرای دستی Workflow
   push:
     branches:
       - main
     paths:
-      - 'worker.js'
-      - 'wrangler-*.toml'
-      - 'package.json'
-      - 'scraper.py' # اگر scraper.py تغییر کند، workflow باید اجرا شود
-      - 'all_live_configs.json' # اگر این فایل دستی تغییر کند، workflow باید اجرا شود
-      - 'cache_version.txt' # اگر این فایل دستی تغییر کند، workflow باید اجرا شود
+      - 'worker.js' # تغییر در کد Worker
+      - 'wrangler-*.toml' # تغییر در پیکربندی Workerها
+      - 'package.json' # تغییر در وابستگی‌های Node.js
+      - 'scraper.py' # تغییر در اسکریپت تولید پیکربندی
+      # نیازی به اضافه کردن all_live_configs.json و cache_version.txt نیست، چون توسط scraper تولید می‌شوند.
+      # اگر این فایل‌ها به صورت دستی تغییر کنند، یعنی کد scraper یا logic آن‌ها تغییر کرده و پوشش داده می‌شود.
   schedule:
-    - cron: '0 */4 * * *' # هر 4 ساعت
+    - cron: '0 */4 * * *' # اجرای خودکار هر 4 ساعت
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+  cancel-in-progress: true # لغو اجرای قبلی در صورت شروع اجرای جدید
 
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     name: build configs, deploy workers & upload to kv
     permissions:
-      contents: read
-      id-token: write # برای OIDC (اگر استفاده شود) یا سایر مجوزهای پیشرفته
-      # اگر از secrets.cloudflare_api_token استفاده می‌کنید، نیازی به id-token: write نیست.
-      # اما برای اطمینان از دسترسی کامل در آینده می‌تواند مفید باشد.
+      contents: read # برای checkout کردن کد
+      id-token: write # برای احراز هویت OIDC با Cloudflare (اگر در آینده استفاده شود)
+      # برای CLOUDFLARE_API_TOKEN، فقط نیاز به تنظیم آن در Secrets دارید.
       
     steps:
       - name: checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4 # استفاده از آخرین نسخه پایدار اکشن checkout
 
       - name: setup python 3.10
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v5 # استفاده از آخرین نسخه پایدار اکشن setup-python
         with:
           python-version: '3.10'
-          cache: 'pip' # کش کردن پکیج‌های pip برای سرعت بیشتر
-          cache-dependency-path: 'requirements.txt' # اگر دارید
-
+          # cache: 'pip' # اگر فایل requirements.txt دارید، این خط و خط بعدی را فعال کنید
+          # cache-dependency-path: 'requirements.txt'
+          
       - name: install python dependencies
         run: pip install requests pyyaml
 
       - name: run config scraper
         run: python scraper.py
         env:
-          GH_PAT: ${{ secrets.GH_PAT }} # نام متغیرهای محیطی معمولاً با حروف بزرگ است
+          GH_PAT: ${{ secrets.GH_PAT }} # نام متغیر محیطی با حروف بزرگ
 
-      # بهبود 1: استفاده از اکشن رسمی setup-node برای نصب Node.js
-      # این روش پایدارتر و استانداردتر است.
+      # ✅ اصلاح 1 (مهم): استفاده از اکشن رسمی setup-node برای نصب Node.js
+      # این روش پایدارتر، سریع‌تر و استانداردتر است.
       - name: setup node.js 20
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm' # کش کردن dependencyهای npm برای سرعت بیشتر
+          # cache: 'npm' # ❌ این خط را حذف می‌کنیم تا خطای "Dependencies lock file is not found" برطرف شود
+                          # چون package-lock.json در ریشه ریپازیتوری شما وجود ندارد.
 
-      # بهبود 2: نصب wrangler به صورت محلی و بررسی نسخه آن
+      # ✅ اصلاح 2 (مهم): نصب wrangler به صورت محلی و بررسی نسخه آن
       # با استفاده از setup-node@v4، npm در PATH قرار می‌گیرد.
       - name: install node.js dependencies and local wrangler
         run: |
-          npm install # نصب dependencyهای پروژه از package.json (اگر در ریشه دارید)
-          npm install wrangler@latest # نصب wrangler به صورت محلی در node_modules
-          echo "Installed wrangler version (local):"
-          ./node_modules/.bin/wrangler --version # بررسی نسخه wrangler نصب شده محلی
+          echo "Installing project Node.js dependencies..."
+          npm install # نصب dependencyهای پروژه از package.json شما
+          echo "Installing wrangler globally via npm (latest version)..."
+          npm install -g wrangler@latest # ⚡️ تغییر: نصب Wrangler به صورت گلوبال
+          # دلیل: برخی ابزارها (مثل Wrangler) برای راحتی کار انتظار دارند که به صورت گلوبال در PATH باشند.
+          # همچنین، با وجود package.json شما، نصب `wrangler` در `devDependencies` آن هم صورت می‌گیرد.
+          # نصب گلوبال اینجا اطمینان می‌دهد که `wrangler` همیشه در PATH است.
+          
+          echo "Installed wrangler version:"
+          wrangler --version # نیازی به ./node_modules/.bin نیست چون گلوبال نصب شده.
           
       # --- مرحله دیپلوی هر چهار worker ---
       - name: deploy all workers
         run: |
           worker_names=("rapid-scene-1da6" "winter-hill-0307" "v2v" "v2v-proxy") # لیست چهار worker
-          for worker_name in "${worker_names[@]}"; do # استفاده از "@" برای اطمینان از پردازش صحیح آرایه
+          # تأیید می‌کنیم که CLOUDFLARE_ACCOUNT_ID در secrets وجود دارد.
+          if [ -z "${{ secrets.CLOUDFLARE_ACCOUNT_ID }}" ]; then
+            echo "Error: CLOUDFLARE_ACCOUNT_ID secret is not set. Exiting."
+            exit 1
+          fi
+
+          for worker_name in "${worker_names[@]}"; do
             echo "--- Deploying worker: $worker_name ---"
-            # استفاده از npx برای فراخوانی wrangler نصب شده محلی و دستور deploy
-            # یا مستقیماً `./node_modules/.bin/wrangler` که قبلاً در مراحل قبل نصب شده
-            ./node_modules/.bin/wrangler deploy "worker.js" \
+            wrangler deploy "worker.js" \
               --config "wrangler-${worker_name}.toml" \
               --name "$worker_name" \
               --compatibility-date "2024-03-20" \
@@ -86,16 +96,23 @@ jobs:
             echo "--- Deployment of $worker_name successful ---"
           done
         env:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }} # نام متغیرهای محیطی معمولاً با حروف بزرگ است
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }} # نام متغیر محیطی با حروف بزرگ
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }} # نام متغیر محیطی با حروف بزرگ
 
       # --- مراحل آپلود kv به namespace مشترک/مرکزی ---
-      # ✅ رفع مشکل 3: تصحیح دستور wrangler kv:key put برای all_live_configs.json
+      # ✅ اصلاح 3 (مهم): استفاده صحیح از cat و pipe برای آپلود all_live_configs.json به KV
       - name: upload all_live_configs.json to kv
         run: |
+          # اطمینان حاصل می‌کنیم که CLOUDFLARE_KV_NAMESPACE_ID در secrets وجود دارد.
+          if [ -z "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}" ]; then
+            echo "Error: CLOUDFLARE_KV_NAMESPACE_ID secret is not set. Skipping KV upload."
+            exit 1 # این را می‌توان به "continue" تغییر داد اگر نمی‌خواهید کل Workflow متوقف شود.
+          fi
+          
           if [ -f "all_live_configs.json" ]; then # بررسی وجود فایل قبل از آپلود
+            echo "Uploading all_live_configs.json to KV (Key: all_live_configs.json)..."
             cat all_live_configs.json | \
-            ./node_modules/.bin/wrangler kv:key put "all_live_configs.json" \
+            wrangler kv:key put "all_live_configs.json" \
               --namespace-id "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}"
             echo "all_live_configs.json uploaded successfully."
           else
@@ -105,12 +122,19 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
 
-      # ✅ رفع مشکل 4: تصحیح دستور wrangler kv:key put برای cache_version.txt
+      # ✅ اصلاح 4 (مهم): استفاده صحیح از cat و pipe برای آپلود cache_version.txt به KV
       - name: upload cache_version.txt to kv
         run: |
+          # اطمینان حاصل می‌کنیم که CLOUDFLARE_KV_NAMESPACE_ID در secrets وجود دارد.
+          if [ -z "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}" ]; then
+            echo "Error: CLOUDFLARE_KV_NAMESPACE_ID secret is not set. Skipping KV upload."
+            exit 1
+          fi
+
           if [ -f "cache_version.txt" ]; then # بررسی وجود فایل قبل از آپلود
+            echo "Uploading cache_version.txt to KV (Key: cache_version.txt)..."
             cat cache_version.txt | \
-            ./node_modules/.bin/wrangler kv:key put "cache_version.txt" \
+            wrangler kv:key put "cache_version.txt" \
               --namespace-id "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}"
             echo "cache_version.txt uploaded successfully."
           else
